# melanoma-project

./: .gitattributes  .gitignore  LICENSE  README.md  download_dataset.py  melanoma_combo_model.keras  melanoma_experimental_model.keras  melanoma_undersample_model.keras  pyproject.toml
backend/: main.py  model.py  requirements.txt  test_loader.py  utils.py
backend/data_preprocessing_training/audrey-nathan/: data_preprocessing.ipynb  dscc_net_preprocessing.ipynb
backend/data_preprocessing_training/priyansh-rushil/: run.ipynb
backend/model_testing/nathan-audrey/: data_preprocessing.ipynb  nathan_audrey.ipynb
data_preprocessing_training/danny-elena/: preprocessing_code.ipynb
frontend/: bun.lockb  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/public/: index.html
frontend/src/: App.js  api.ts
frontend/src/pages/: Home.jsx  (+3 more)
model_final/: priyansh_rushil.ipynb
model_testing/: data_preprocessing.ipynb  nathan_audrey.ipynb
model_testing/himal-han/: model_testing_best.ipynb
model_testing/nathan-audrey/: data_preprocessing.ipynb
model_training/: danny_elena.ipynb  himal_han.ipynb  model_testing.ipynb  model_testing_new.ipynb  model_testing_old.ipynb  nathan_audrey.ipynb  old_model.ipynb  priyansh_rushil.ipynb  test.csv  train.csv
models/audrey-nathan/: best_model.keras
models/himal-han/: melanoma_combo_model.keras
notebooks/: data_exploration.ipynb  data_preprocessing.ipynb
notebooks/danny-elena/: preprocessing_code.ipynb
notebooks/priyansh-rushil/: run.ipynb
processing_images/: run.ipynb
(+24 files in other folders)
