[project]
name = "kaggle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.7",
    "jupyter>=1.1.1",
    "pandas-profiling>=3.6.6",
    "tqdm>=4.67.1",
    "widgetsnbextension>=4.0.14",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "opencv-python>=4.11.0.86",
    "pandas>=2.2.3",
]
